# DD2477_Search_Project

./: .gitignore  README.md
evaluation/: README.md  annotated_highlight_quality.txt  annotated_results.txt  evaluate_highlights.py  evaluate_metrics.py  getRankings.py  getRankingswithRel.py  highlight_annotation_prompt.txt  pyproject.toml
evaluation/query_outputs/: annotated_highlight_quality.txt  query_results_hybrid.txt  query_results_lexical.txt  query_results_vector.txt
evaluation/results/: highlight_metrics_averaged.csv  highlight_metrics_per_query.csv  highlight_pr_curve_per_query.csv  metrics_averaged.csv  metrics_per_query.csv  pr_curve_per_query.csv
evaluation/results_comparison/: metrics_comparison.csv
evaluation/results_highlights/: highlight_annotation_input.txt  highlight_metrics_averaged.csv  highlight_metrics_per_query.csv  highlight_pr_curve_per_query.csv  highlight_predictions.json
evaluation/results_hybrid/: highlight_metrics_per_query.csv  metrics_averaged.csv  metrics_per_query.csv  pr_curve_per_query.csv
evaluation/results_lexical/: metrics_averaged.csv  metrics_per_query.csv  pr_curve_per_query.csv
evaluation/results_vector/: metrics_averaged.csv  metrics_per_query.csv  pr_curve_per_query.csv
evaluation/search/: elastic_utils.py  (+4 more)
indexing/: README.md  asymmetric_results.csv  asymmetric_retrieval_eval.py  benchmark_embedding.py  benchmark_embedding_local.py  encoder_test_dataset.csv  index.py  pyproject.toml  similarity_eval.py  similarity_results.csv  synonym_similarity_eval.py  synonym_similarity_results.csv  synonym_test_dataset.csv
(+32 files in other folders)
