[project]
name = "engine"
version = "0.1.0"
description = "Django backend for search project"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-htmx>=1.27.0",
    "dotenv>=0.9.9",
    "elasticsearch>=9.3.0",
    "google-genai>=1.73.1",
    "sentence-transformers>=5.4.0",
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "django-extensions",
]
