[project]
name = "search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.3.0",
    "matplotlib>=3.10.8",
    "tqdm>=4.66.5",
    "sentence-transformers>=5.3.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

# use gpu versions of torch and torchvision
[tool.uv.sources]
torch = [{ index = "torch"}]
torchvision = [{ index = "torch" }]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
